tests/ui/binding/issue-40402-1.stderr
error[E0507]: cannot move out of index of `Vec<String>`
  --> $DIR/issue-40402-1.rs:9:13
   |
LL |     let e = f.v[0];
   |             ^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     let e = &f.v[0];
   |             +
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let e = f.v[0].clone();
   |                   ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
